# outfit-assistant

./: Dockerfile  docker-compose.yml  pyproject.toml
localization/: messages.json
src/: main.py
src/core/: config.py  messages.py  prompts.py  service_mediator.py
src/services/bucket_s3/: bucket_s3_service.py
src/services/dynamo_db/: dynamo_db_service.py
src/services/open_ai/: open_ai_chat.py
src/services/telegram/: constants.py  telegram_service.py
src/services/telegram/handlers/: contact.py  message.py  survey.py  upload.py
src/utils/: normalize_answer_bot.py
